Adding implementations of header functions
Added:
-create_list
-create_node
-update_min
-update_max
-check_list
-push_data
-(partial)pop_data
-print_list

--- a/CGenericLinkedList/CGenericLinkedList.vcxproj
+++ b/CGenericLinkedList/CGenericLinkedList.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="LinkedList.c" />
+    <ClCompile Include="main.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
